dropshot/tests/fail/bad_server_channel4.stderr
error[E0277]: the trait bound `QueryParams: schemars::JsonSchema` is not satisfied
  --> tests/fail/bad_server_channel4.rs:41:18
   |
41 |         _params: Query<QueryParams>,
   |                  ^^^^^^^^^^^^^^^^^^ the trait `schemars::JsonSchema` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `schemars::JsonSchema`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                                                ^^^^^^^^^^ required by this bound in `Query`

error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_server_channel4.rs:41:18
   |
41 |         _params: Query<QueryParams>,
   |                  ^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `QueryParams` to implement `serde::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `Query`

error[E0277]: the trait bound `QueryParams: schemars::JsonSchema` is not satisfied
  --> tests/fail/bad_server_channel4.rs:26:18
   |
26 |         _params: Query<QueryParams>,
   |                  ^^^^^^^^^^^^^^^^^^ the trait `schemars::JsonSchema` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `schemars::JsonSchema`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                                                ^^^^^^^^^^ required by this bound in `Query`

error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_server_channel4.rs:26:18
   |
26 |         _params: Query<QueryParams>,
   |                  ^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `QueryParams` to implement `serde::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `Query`

error[E0277]: the trait bound `QueryParams: schemars::JsonSchema` is not satisfied
  --> tests/fail/bad_server_channel4.rs:16:1
   |
16 | #[dropshot::server]
   | ^^^^^^^^^^^^^^^^^^^ the trait `schemars::JsonSchema` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `schemars::JsonSchema`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                                                ^^^^^^^^^^ required by this bound in `Query`
   = note: this error originates in the attribute macro `dropshot::server` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_server_channel4.rs:16:1
   |
16 | #[dropshot::server]
   | ^^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `QueryParams` to implement `serde::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `Query`
   = note: this error originates in the attribute macro `dropshot::server` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `QueryParams: schemars::JsonSchema` is not satisfied
  --> tests/fail/bad_server_channel4.rs:39:5
   |
39 | /     async fn bad_channel(
40 | |         _rqctx: RequestContext<()>,
41 | |         _params: Query<QueryParams>,
42 | |         _upgraded: WebsocketConnection,
43 | |     ) -> dropshot::WebsocketChannelResult {
   | |_________________________________________^ the trait `schemars::JsonSchema` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `schemars::JsonSchema`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                                                ^^^^^^^^^^ required by this bound in `Query`

error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_server_channel4.rs:39:5
   |
39 | /     async fn bad_channel(
40 | |         _rqctx: RequestContext<()>,
41 | |         _params: Query<QueryParams>,
42 | |         _upgraded: WebsocketConnection,
43 | |     ) -> dropshot::WebsocketChannelResult {
   | |_________________________________________^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `QueryParams` to implement `serde::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `Query`
